# OmniStem

./: .audit-marker  .gitignore  ATTRIBUTION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MODEL_LICENSES.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.bootstrap/: chunk00  chunk01
.github/workflows/: ci.yml
configs/export-presets/: studio-wav-float32.yaml
configs/pipelines/: god-vocals.yaml
docker/: compose.yaml
docs/: OmniStem-God-Mode-Spec.docx  architecture.md  cli-reference.md  linux.md  repository-publication.md  roadmap.md  validation-report.md  windows.md
examples/: api-job.json
scripts/: install-linux.sh  install-windows.ps1  publish-github.ps1  publish-github.sh
src/omnistem/: __init__.py  __main__.py  cli.py
src/omnistem/api/: app.py
src/omnistem/audio/: ffmpeg.py
src/omnistem/core/: history.py  manifest.py  model_registry.py  orchestrator.py  paths.py  subprocess_runner.py  types.py
src/omnistem/desktop/: app.py
src/omnistem/engines/: audio_separator.py  base.py  demucs.py  openunmix.py  registry.py  spleeter.py
src/omnistem/ensembles/: waveform.py
tests/: test_engines.py  test_history.py  test_manifest.py  test_models.py  test_orchestrator.py  test_paths.py
