[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnistem"
version = "0.1.1"
description = "Unified local orchestration for open-source music stem separation engines"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Krishan Oedairadjsingh (K.O.SONGS)"}]
dependencies = [
  "typer>=0.12,<1",
  "rich>=13.7,<15",
  "platformdirs>=4.2,<5",
]

[project.optional-dependencies]
demucs = ["demucs>=4.0.1"]
spleeter = ["spleeter>=2.4,<2.5; python_version < '3.12'"]
openunmix = ["openunmix>=1.3.0"]
audio-separator-cpu = ["audio-separator[cpu]>=0.30.0"]
audio-separator-gpu = ["audio-separator[gpu]>=0.30.0"]
ensemble = ["numpy>=1.26,<3", "soundfile>=0.12,<1"]
api = ["fastapi>=0.115,<1", "uvicorn>=0.30,<1"]
desktop = ["PySide6>=6.7,<7"]
dev = ["pytest>=8,<10", "pytest-cov>=5,<8", "ruff>=0.6,<1", "mypy>=1.11,<3", "build>=1.2,<2", "httpx>=0.27,<1"]
all = [
  "audio-separator[cpu]>=0.30.0",
  "demucs>=4.0.1",
  "spleeter>=2.4,<2.5; python_version < '3.12'",
  "openunmix>=1.3.0",
  "numpy>=1.26,<3",
  "soundfile>=0.12,<1",
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "PySide6>=6.7,<7",
]

[project.scripts]
omnistem = "omnistem.cli:app"
omnistem-desktop = "omnistem.desktop.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["omnistem"]
exclude = ["src/omnistem/desktop/.*"]

[[tool.mypy.overrides]]
module = ["soundfile"]
ignore_missing_imports = true
